--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, 
+  initial-scale=1.0" />
   <title>Countdown timer</title>
   <link rel="stylesheet" href="./css/common.css" />
 </head>
 
 <body>
-  <p><a href="index.html">Go back</a></p>
+  <p><a href="./index.html">Go back</a></p>
 
   <input type="text" id="datetime-picker" />
   <button type="button" data-start>Start</button>
