--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/common.css" />
 </head>
 
-<body>
+<body class="body">
   <p><a href="index.html">Go back</a></p>
 
   <input type="text" id="datetime-picker" />
