--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/common.css" />
 </head>
 
-<body class="body_index">
+<body class="body">
   <ul>
     <li><a href="./01-color-switcher.html">Color switcher</a></li>
     <li><a href="./02-timer.html">Countdown timer</a></li>
