--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/common.css" />
 </head>
 
-<body class="body">
+<body>
   <p><a class="btn btn-white btn-animate" href="index.html">Go back</a></p>
 
   <button class="btn btn-white btn-animate" type="button" data-start>Start</button>
