--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="./css/common.css" />
 </head>
 
-<body class="body">
+<body>
   <p><a href="index.html">Go back</a></p>
-
-  <input type="text" id="datetime-picker" />
-  <button type="button" data-start>Start</button>
+  <div class="timer-imput">
+    <input class="imput" type="text" id="datetime-picker" />
+    <button type="button" data-start>Start</button>
+  </div>
 
   <div class="timer">
     <div class="field">
