--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <p><a href="index.html">Go back</a></p>
+  <p><a href="./index.html">Go back</a></p>
   <div class="timer-imput">
     <input class="imput" type="text" id="datetime-picker" />
     <button class="button-imput" type="button" data-start>Start</button>
