--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="body">
-  <p><a href="./index.html">Go back</a></p>
+  <p><a class="link-promis" href="./index.html">Go back</a></p>
 
   <form class="form">
     <label>
