--- a/src/01-color-switcher.html
+++ b/src/01-color-switcher.html
@@ -14,7 +14,7 @@
   <button class="btn btn-white btn-animate" type="button" data-start>Start</button>
   <button class="btn" type="button" data-stop>Stop</button>
 
-  <script src="js/01-color-switcher.js" type="module"></script>
+  <script src="./js/01-color-switcher.js" type="module"></script>
 </body>
 
 </html>
