--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -13,7 +13,8 @@
   <p><a href="index.html">Go back</a></p>
   <div class="timer-imput">
     <input class="imput" type="text" id="datetime-picker" />
-    <button class="button-imput" type="button" data-start>Start</button>
+    <button class="button-imput" type="button" data-action-start>Start</button>
+    <button class="button-imput" type="button" data-action-stop> Stop</button>
   </div>
 
   <div class="timer">
