--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -14,7 +14,8 @@
   <div class="timer-imput">
     <input class="imput" type="text" id="datetime-picker" />
     <button class="button-imput" type="button" data-action-start>Start</button>
-    <button class="button-imput" type="button" data-action-stop> Stop</button>
+    <button class="button-imput" type="button" data-action-stop value="Refresh Page"
+      onClick="window.location.href=window.location.href"> Stop</button>
   </div>
 
   <div class="timer">
